--- a/index.html
+++ b/index.html
@@ -1290,5 +1290,6 @@
 
         <!--=============== MAIN JS ===============-->
         <script src="assets/js/main.js"></script>
+     <script src="//code.tidio.co/4esvfljirbeqlmvvzcpvqjoercstbw32.js" async></script>
     </body>
 </html>
