--- a/index.html
+++ b/index.html
@@ -1215,9 +1215,9 @@
                     <h3 class="footer__title">Our information</h3>
 
                     <ul class="footer__list">
-                        <li>1234 - Peru</li>
-                        <li>La Libertad 43210</li>
-                        <li>123-456-789</li>
+                        <li>Jua Kali - Kitengela</li>
+                        <li>Kenya</li>
+                        <li>+254 701 693 858</li>
                     </ul>
                 </div>
                 <div class="footer__content">
@@ -1244,16 +1244,16 @@
 
                     <ul class="footer__links">
                         <li>
-                            <a href="#" class="footer__link">Road bikes</a>
+                            <a href="#" class="footer__link">Monopoly</a>
                         </li>
                         <li>
-                            <a href="#" class="footer__link">Mountain bikes</a>
+                            <a href="#" class="footer__link">UNO</a>
                         </li>
                         <li>
-                            <a href="#" class="footer__link">Electric</a>
+                            <a href="#" class="footer__link">Drunken Tower</a>
                         </li>
                         <li>
-                            <a href="#" class="footer__link">Accesories</a>
+                            <a href="#" class="footer__link">Scrabble</a>
                         </li>
                     </ul>
                 </div>
@@ -1277,7 +1277,7 @@
                 </div>
             </div>
 
-            <span class="footer__copy">&#169; Bedimcode. All rigths reserved</span>
+            <span class="footer__copy">&#169; Mark Bosire. All rigths reserved</span>
         </footer>
 
         <!--=============== SCROLL UP ===============-->
