--- a/index.html
+++ b/index.html
@@ -1376,16 +1376,16 @@
 
                     <ul class="footer__links">
                         <li>
-                            <a href="#" class="footer__link">Road bikes</a>
+                            <a href="#" class="footer__link">Lovers Game</a>
                         </li>
                         <li>
-                            <a href="#" class="footer__link">Mountain bikes</a>
+                            <a href="#" class="footer__link">Friends Game</a>
                         </li>
                         <li>
-                            <a href="#" class="footer__link">Electric</a>
+                            <a href="#" class="footer__link">Fun Games</a>
                         </li>
                         <li>
-                            <a href="#" class="footer__link">Accesories</a>
+                            <a href="#" class="footer__link">Money Games</a>
                         </li>
                     </ul>
                 </div>
