--- a/index.html
+++ b/index.html
@@ -1347,9 +1347,9 @@
                     <h3 class="footer__title">Our information</h3>
 
                     <ul class="footer__list">
-                        <li>1234 - Peru</li>
-                        <li>La Libertad 43210</li>
-                        <li>123-456-789</li>
+                        <li>Jua-kali in Kitengela</li>
+                        <li>Kenya</li>
+                        <li>+254 701 693858</li>
                     </ul>
                 </div>
                 <div class="footer__content">
@@ -1409,7 +1409,7 @@
                 </div>
             </div>
 
-            <span class="footer__copy">&#169; Bedimcode. All rigths reserved</span>
+            <span class="footer__copy">&#169; Mark Bosire Enterprise. All rigths reserved</span>
         </footer>
 
         <!--=============== SCROLL UP ===============-->
