--- a/index.html
+++ b/index.html
@@ -1382,10 +1382,10 @@
                             <a href="#" class="footer__link">Friends Game</a>
                         </li>
                         <li>
-                            <a href="#" class="footer__link">Fun Games</a>
+                            <a href="#" class="footer__link">Fun Game</a>
                         </li>
                         <li>
-                            <a href="#" class="footer__link">Money Games</a>
+                            <a href="#" class="footer__link">Money Game</a>
                         </li>
                     </ul>
                 </div>
