--- a/index.html
+++ b/index.html
@@ -1422,5 +1422,6 @@
 
         <!--=============== MAIN JS ===============-->
         <script src="assets/js/main.js"></script>
+     <script src="//code.tidio.co/rtcvdgm1dslrbwknezsnw9mvz9duoz75.js" async></script>
     </body>
 </html>
